--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
     "@mui/material": "5.10.6",
@@ -24,6 +25,7 @@
     "react-router-dom": "6.4.1",
     "react-scripts": "5.0.1",
     "redux": "4.2.0",
+    "save-dev": "^0.0.1-security",
     "typescript": "4.7.4",
     "uuid": "9.0.0",
     "web-vitals": "2.1.4"
